--- a/src/components/About/about.css
+++ b/src/components/About/about.css
@@ -1,5 +1,22 @@
-.about {
+.about-container {
     width: 100%;
-    height: 80vh;
-    background-color: green;
+    height: 60vh;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    flex-wrap: wrap;
+    /* background-color: green; */
+}
+
+.about-contnent {
+    margin: 30px;
+    /* width: 400px; */
+}
+
+.about-description-container {
+    width: 500px;
+}
+
+.about-interests-container {
+    width: 300px;
 }
