Added icons from fontawesome

--- a/src/components/Hero/hero.css
+++ b/src/components/Hero/hero.css
@@ -9,10 +9,14 @@
 }
 
 .hero-title-container {
-    font-family: Doppio One;
+    /* font-family: Doppio One; */
 }
 
 .social-icons-container a {
     margin: 10px;
+    font-size: x-large;
 }
 
+.social-icons-container a:hover {
+    color: tomato;
+}
