--- a/src/components/About/about.css
+++ b/src/components/About/about.css
@@ -1,10 +1,11 @@
 .about-container {
     width: 100%;
-    height: 60vh;
+    height: 80vh;
     display: flex;
     justify-content: space-evenly;
     align-items: center;
     flex-wrap: wrap;
+    font-size: 23px;
     /* background-color: green; */
 }
 
