Remove font styles from css

--- a/src/components/About/about.css
+++ b/src/components/About/about.css
@@ -5,7 +5,7 @@
     justify-content: space-evenly;
     align-items: center;
     flex-wrap: wrap;
-    font-size: 23px;
+    /* font-size: 23px; */
     /* background-color: green; */
 }
 
