--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -5,16 +5,18 @@ body {
   /* background-color: hsla(0, 0%, 0%, 1); */
   background-color: black;
   color: white;
-  font-family: georgia, serif;
+  /* font-family: georgia, serif;
   font-weight: normal;
   word-wrap: break-word;
   font-kerning: normal;
   -moz-font-feature-settings: 'kern', 'liga', 'clig', 'calt';
   -ms-font-feature-settings: 'kern', 'liga', 'clig', 'calt';
   -webkit-font-feature-settings: 'kern', 'liga', 'clig', 'calt';
-  font-feature-settings: 'kern', 'liga', 'clig', 'calt';
+  font-feature-settings: 'kern', 'liga', 'clig', 'calt'; */
 }
-
+::-webkit-scrollbar { 
+  display: none; 
+}
 
 main {
   display: flex;
