Add min-height to fix overflow on mobile.

--- a/src/components/About/about.css
+++ b/src/components/About/about.css
@@ -5,6 +5,7 @@
     justify-content: space-evenly;
     align-items: center;
     flex-wrap: wrap;
+    min-height: fit-content;
     /* font-size: 23px; */
     /* background-color: green; */
 }
